# fast-api-strawberry-docker

./: .gitignore  Dockerfile  pyproject.toml  upload.txt
fast-api-strawberry-docker/: chat_ws.html  main.py  store.py
